A django-bootstrap form shows up when clicking register now. Used part of the TranskribusWebUI code

--- a/scriptnet/competitions/templates/competitions/master.html
+++ b/scriptnet/competitions/templates/competitions/master.html
@@ -19,7 +19,7 @@
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'mastersite/font-awesome/css/font-awesome.min.css' %}" type="text/css">
 
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="{% static 'mastersite/css/animate.min.css' %}" type="text/css">
@@ -182,7 +182,7 @@ Eu pro modus congue consetetur, has malis option recteque in. In nam laboramus n
                     </p><p class="text-faded">
 Erat gubergren honestatis vel id, probo appellantur eu his. Option nominavi accusata pri eu, errem apeirian nam et. Per vidit omnis vulputate at, et sit malis utamur delectus. Fugit minim adipisci ex has, dolorem gloriatur definitionem per eu. Ei nam eirmod suavitate scripserit, legere scripserit te vis. Illud utroque deterruisset pri in, recusabo neglegentur ex sed.
                         </p>
-                    <a href="register" class="btn btn-default btn-xl">Register</a>
+                    <a href="{% url 'register' %}" class="btn btn-default btn-xl">Register</a>
                 </div>
             </div>
         </div>
