--- a/scriptnet/competitions/templates/competitions/register.html
+++ b/scriptnet/competitions/templates/competitions/register.html
@@ -13,6 +13,8 @@
 
     <title>ScriptNet Document Understanding Competitions</title>
 
+    <!-- TODO: Many of these statics shouldnt be under mastersite; -->
+    
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="{% static 'mastersite/css/bootstrap.min.css' %}" type="text/css">
 
@@ -39,7 +41,9 @@
 
 <body id="page-top">
 
-    <nav id="mainNav" class="navbar navbar-inverse navbar-fixed-top">
+    <!-- TODO: Use django 'extends' template tag  -->
+    <!-- TODO: And do so that the navbar looks the same for all subpages  -->
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top"> 
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
