--- a/scriptnet/competitions/templates/competitions/master.html
+++ b/scriptnet/competitions/templates/competitions/master.html
@@ -50,7 +50,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">ScriptNet</a>
+                {% if user.is_authenticated %}
+                <a class="navbar-brand page-scroll" href="#page-top"><small><small>Logged in as</small></small> {{ user.first_name }} {{ user.last_name }} </a>
+                <a class="navbar-brand page-scroll" href="{% url 'signout' %}"><small><small>[Logout]</a>
+                {% else %}
+                <a class="navbar-brand page-scroll" href="#page-top"><small><small>Welcome to</small></small> ScriptNet </a>
+                {% endif %}
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
