Changes the submission template to a bootstrap one

--- a/scriptnet/competitions/templates/competitions/master.html
+++ b/scriptnet/competitions/templates/competitions/master.html
@@ -15,19 +15,19 @@
     <title>ScriptNet Document Understanding Competitions</title>
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="{% static 'mastersite/css/bootstrap.min.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
 
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{% static 'mastersite/font-awesome/css/font-awesome.min.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}" type="text/css">
 
     <!-- Plugin CSS -->
-    <link rel="stylesheet" href="{% static 'mastersite/css/animate.min.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/animate.min.css' %}" type="text/css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'mastersite/css/creative.css' %}" type="text/css">
-    <link rel="stylesheet" href="{% static 'mastersite/css/sfikas.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/creative.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/sfikas.css' %}" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -125,7 +125,7 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
 			</p>
                 </div>
 		<div class="col-lg-4">
-		    <img src="{% static 'mastersite/img/nicesamples/1.jpg' %}" class="img-responsive" alt="">
+		    <img src="{% static 'img/nicesamples/1.jpg' %}" class="img-responsive" alt="">
 		</div>
             </div>
         </div>
@@ -148,7 +148,7 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
 				{% for c in competitions %}
                 <div class="col-lg-3 col-sm-6 text-center">
                     <a href="{{ c.id }}/" class="portfolio-box">
-                        <img src="{% static 'mastersite/img/nicesamples/1.jpg' %}" class="img-responsive" alt="">
+                        <img src="{% static 'img/nicesamples/1.jpg' %}" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -175,7 +175,7 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
             <div class="row">
                 <!-- <div class="col-lg-8 col-lg-offset-2 text-center"> -->
                 <div class="col-lg-4">
-                    <img src="{% static 'mastersite/img/nicesamples/3.jpg' %}" class="img-responsive" alt="">
+                    <img src="{% static 'img/nicesamples/3.jpg' %}" class="img-responsive" alt="">
                 </div>
 		        <div class="col-lg-8">
                     <h2 class="section-heading">Register</h2>
@@ -210,7 +210,7 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
 		            </form>
                 </div>
                 <div class="col-lg-4">
-                    <img src="{% static 'mastersite/img/nicesamples/3.jpg' %}" class="img-responsive" alt="">
+                    <img src="{% static 'img/nicesamples/3.jpg' %}" class="img-responsive" alt="">
                 </div>                
             </div>
         </div>
@@ -226,7 +226,7 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
 			<br><br><br><br><br>
 			<div class="row">
 				<div class="col-lg-6 vcenter">
-                			<img src="{% static 'mastersite/img/logos/ncsrd.jpg' %}" class="img-responsive" alt="">
+                			<img src="{% static 'img/logos/ncsrd.jpg' %}" class="img-responsive" alt="">
 				</div><div class="col-lg-6 vcenter">
 				NCSR "Demokritos"
 				</div>
@@ -234,7 +234,7 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
 			<br>
 			<div class="row">
 				<div class="col-lg-6 vcenter">
-                			<img src="{% static 'mastersite/img/logos/iit_logo.png' %}" width="30%" class="img-responsive" alt="">
+                			<img src="{% static 'img/logos/iit_logo.png' %}" width="30%" class="img-responsive" alt="">
 				</div><div class="col-lg-6 vcenter">
 				Institute of Informatics and Telecommunications
 				</div>
@@ -242,7 +242,7 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
 			<br>
 			<div class="row">
 				<div class="col-lg-6 vcenter">
-                			<img src="{% static 'mastersite/img/logos/cil_logo.jpg' %}" class="img-responsive" alt="">
+                			<img src="{% static 'img/logos/cil_logo.jpg' %}" class="img-responsive" alt="">
 				</div><div class="col-lg-6 vcenter">
 				Computational Intelligence Laboratory
 				</div>
@@ -250,7 +250,7 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
 			<br>
 			<div class="row">
 				<div class="col-lg-6 vcenter">
-                			<img src="{% static 'mastersite/img/logos/read_logo.png' %}" width="50%" class="img-responsive" alt="">
+                			<img src="{% static 'img/logos/read_logo.png' %}" width="50%" class="img-responsive" alt="">
 				</div><div class="col-lg-6 vcenter">
 				READ project
 				</div>
@@ -271,18 +271,18 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
     </section>
 
     <!-- jQuery -->
-    <script src="{% static 'mastersite/js/jquery.js' %}"></script>
+    <script src="{% static 'js/jquery.js' %}"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="{% static 'mastersite/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="{% static 'mastersite/js/jquery.easing.min.js' %}"></script>
-    <script src="{% static 'mastersite/js/jquery.fittext.js' %}"></script>
-    <script src="{% static 'mastersite/js/wow.min.js' %}"></script>
+    <script src="{% static 'js/jquery.easing.min.js' %}"></script>
+    <script src="{% static 'js/jquery.fittext.js' %}"></script>
+    <script src="{% static 'js/wow.min.js' %}"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="{% static 'mastersite/js/creative.js' %}"></script>
+    <script src="{% static 'js/creative.js' %}"></script>
 
 </body>
 
