--- a/scriptnet/competitions/templates/competitions/competition.html
+++ b/scriptnet/competitions/templates/competitions/competition.html
@@ -1,157 +1,269 @@
 {% load staticfiles %}
 
+
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
+
 <head>
-	<title>ScriptNet / {{ competition.name }} </title>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
-	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" />
-	<link href="http://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css">
-	<script src="{% static 'competitionsite/js/jquery.min.js' %}"></script>
-	<script src="{% static 'competitionsite/js/config.js' %}"></script>
-	<script src="{% static 'competitionsite/js/skel.min.js' %}"></script>
-	<link rel="stylesheet" href="{% static 'competitionsite/css/skel-noscript.css' %} " type="text/css">
-	<link rel="stylesheet" href="{% static 'competitionsite/css/style.css' %}" type="text/css">
-	<link rel="stylesheet" href="{% static 'competitionsite/css/style-desktop.css' %}" type="text/css">
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>ScriptNet / {{ competition.name }} </title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="{% static 'css/blog-post.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
+
 <body>
-	<nav id="nav">
-	 		<!-- <a id="logo" href="http://vc.ee.duth.gr" style="float:left;vertical-align: middle;padding: 0; margin: 6px 0 0 0;border-radius: 0" target="_blank">
-			<img src="images/logo_square.png" height="40px" style="float: left" />
-		</a> -->		
-		<ul class="container">
-			<li>
-				<a id="home" class="selected" href="{% url 'competition' %}{{ competition.id }}">Home</a>
-			</li>
-			{% for tr in competition.track_set.all %}
-			<li>
-				<a id="t1{{ tr.id }}" href="{% url 'competition' %}{{ competition.id }}/{{ tr.id }}">Track {{ tr.id }}</a>
-			</li>
-				{% for subtr in tr.subtrack_set.all %}
-				<li>
-					<a id="t{{ tr.id }}_{{ subtr.id }}" href="{% url 'competition' %}{{ competition.id }}/{{ tr.id }}/{{ subtr.id }}">Subtrack {{ tr.id }}.{{ subtr.id }} </a>
-				</li>
-				{% endfor %}
-			{% endfor %}
-			<li>
-				<a id="o" href="#Organizers">Organizers</a>
-			</li>
-		</ul>
-	</nav>
-	<!-- Home -->
-	<div class="wrapper wrapper-style1 wrapper-first">
-		<article class="container" id="top">
-			<div class="row">
-				<div class="12u">
-					<header>
-						<h3>ScriptNet <!-- <span style="color: darkorange;position: relative;">Net --> </span></h3>
-						<h1 style="font-size: 3em;">
-						{{ competition.name }}
-						</h1>
-					</header>
-				</div>
-			</div>
-			<div class="row">
-				{% if track %}
-				<div id="mainText" class="8u" style="color: black;text-align: justify;">
-					<header>
-					<h1> Track {{ track.id }} - {{ track.name }} </h1>
-					</header>					
-					{{ track.overview | safe }}
-					{% if subtrack %}		
-						<div class="wrapper wrapper-style2">
-						<article>
-							Subtrack {{ track.id }}.{{ subtrack.id }}
-							<ul>
-							<li>Download data</li>
-							<!-- This has to change definitely -- looks too ugly -->
-							<li><a href="{% url 'competition' %}{{ competition.id }}/{{ track.id }}/{{ subtrack.id }}/submit"> Submit method </a></li>
-							<li><a href="{% url 'competition' %}{{ competition.id }}/{{ track.id }}/{{ subtrack.id }}/viewresults"> View results </a></li>-->
-							</ul>
-						</article>
-						</div>						
-				</div>						
-					{% endif %}					
-				{% else %}
-				<div id="mainText" class="8u" style="color: black;text-align: justify;">
-					{{ competition.overview | safe }}
-				</div>
-				{% endif %}
-				<div id="news" class="4u">
-					<header>
-						<h2>News</h2>
-					</header>
-					{{ competition.newsfeed | safe }}
-				</div>
-				<div id="important_dates" class="4u">
-					<header>
-						<h2>Important Dates</h2>
-					</header>
-					{{ competition.important_dates | safe }}
-				</div>
-			</div>
-		</article>
-	</div>
-	<!-- Organizers -->
-	<div class="wrapper wrapper-style3">
-		<article id="Organizers">
-			<header>
-				<h2>Organizers</h2>
 
-			</header>
-			<div class="container">
-				<div class="row">
-					<div class="12u">
-					</div>
-				</div>
-				<div class="row">
-					<div class="6u">
-						<article class="box box-style2">
-							<span class="image-left circle-image"><img src="images/ipratika.png" width="100%" /></span>
-							<h3><a target="_blank" href="http://utopia.duth.gr/~ipratika/">Ioannis Pratikakis</a></h3>
-							<p>Assistant Professor at the Department of Electrical and Computer Engineering, Democritus University of Thrace, Xanthi, Greece.</p>
-						</article>
-					</div>
-					<div class="6u">
-						<article class="box box-style2">
-							<span class="image-left circle-image"><img src="images/zagoris.jpg" width="100%" /></span>
-							<h3><a target="_blank" href="http://www.zagoris.gr">Konstantinos Zagoris</a></h3>
-							<p>Post-Doctoral Researcher at the Department of Electrical and Computer Engineering, Democritus University of Thrace, Xanthi, Greece.</p>
-						</article>
-					</div>
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{% url 'competition' %}#services">ScriptNet</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+          			<li>
+				          <a id="home" class="selected" href="{% url 'competition' %}{{ competition.id }}">Competition home</a>
+			          </li>
+			          {% for tr in competition.track_set.all %}
+			            <li class="dropdown">
+				            <a class="dropdown-toggle" data-toggle="dropdown" id="t1{{ tr.id }}" href="{% url 'competition' %}{{ competition.id }}/{{ tr.id }}">
+                      Track {{ tr.id }}<span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+				              {% for subtr in tr.subtrack_set.all %}
+				              <li>
+  					            <a id="t{{ tr.id }}_{{ subtr.id }}" href="{% url 'competition' %}{{ competition.id }}/{{ tr.id }}/{{ subtr.id }}">Subtrack {{ tr.id }}.{{ subtr.id }} </a>
+	  			            </li>
+				              {% endfor %}
+                    </ul>
+			            </li>                    
+			          {% endfor %}
+		          	<li>
+				          <a id="o" href="#Organizers">Organizers</a>
+			          </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
-				</div>
-				<div class="row">
-					<div class="6u">
-						<article class="box box-style2">
-							<span class="image-left circle-image"><img src="images/bgat.jpg" width="100%" /></span>
-							<h3><a target="_blank" href="http://www.iit.demokritos.gr/~bgat">Basilis Gatos</a></h3>
-							<p>Researcher at the Institute of Informatics and Telecommunications of the National Center for Scientific Research "Demokritos", Athens, Greece.</p>
-						</article>
-					</div>
-					<div class="6u">
-						<article class="box box-style2">
-							<span class="image-left circle-image"><img src="images/louloudis.jpg" width="100%" /></span>
-							<h3><a target="_blank" href="http://www.iit.demokritos.gr\~louloud">Georgios Louloudis</a></h3>
-							<p>Research Associate at the Institute of Informatics and Telecommunications of the National Center for Scientific Research "Demokritos", Athens, Greece.</p>
-						</article>
-					</div>
 
-				</div>
-				<div class="row">
-					<div class="6u">
-						<article class="box box-style2">
-							<span class="image-left circle-image"><img src="images/Nikolaos_Stamatopoulos.jpg" width="100%" /></span>
-							<h3><a target="_blank" href="http://users.iit.demokritos.gr/~nstam/">Nikolaos Stamatopoulos</a></h3>
-							<p>Research Associate at the Institute of Informatics and Telecommunications of the National Center for Scientific Research "Demokritos", Athens, Greece.</p>
-						</article>
-					</div>
-				</div>
-			</div>
-		</article>
-	</div>
+
+    <!-- Page Content -->
+    <div class="container">
+
+        <div class="row">
+          &nbsp;
+        </div>
+        <div class="row">
+          &nbsp;
+        </div>
+        <div class="row">
+          &nbsp;
+        </div>
+        
+        <div class="row">
+
+            <!-- Blog Post Content Column -->
+            <div class="col-lg-8">
+
+                <!-- Blog Post -->
+
+                <!-- Title -->
+                <h1>{{ competition.name }}</h1>
+
+                <!-- Author -->
+                <p class="lead">
+                    by <a href="#">Start Bootstrap</a>
+                </p>
+
+                <hr>
+
+                <!-- Date/Time -->
+                <p><span class="glyphicon glyphicon-time"></span> Posted on August 24, 2013 at 9:00 PM</p>
+
+                <hr>
+
+                <!-- Preview Image -->
+                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
+
+                <hr>
+
+                <!-- Post Content -->
+                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
+
+                <hr>
+
+                <!-- Blog Comments -->
+
+                <!-- Comments Form -->
+                <div class="well">
+                    <h4>Leave a Comment:</h4>
+                    <form role="form">
+                        <div class="form-group">
+                            <textarea class="form-control" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+
+                <hr>
+
+                <!-- Posted Comments -->
+
+                <!-- Comment -->
+                <div class="media">
+                    <a class="pull-left" href="#">
+                        <img class="media-object" src="http://placehold.it/64x64" alt="">
+                    </a>
+                    <div class="media-body">
+                        <h4 class="media-heading">Start Bootstrap
+                            <small>August 25, 2014 at 9:30 PM</small>
+                        </h4>
+                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                    </div>
+                </div>
+
+                <!-- Comment -->
+                <div class="media">
+                    <a class="pull-left" href="#">
+                        <img class="media-object" src="http://placehold.it/64x64" alt="">
+                    </a>
+                    <div class="media-body">
+                        <h4 class="media-heading">Start Bootstrap
+                            <small>August 25, 2014 at 9:30 PM</small>
+                        </h4>
+                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                        <!-- Nested Comment -->
+                        <div class="media">
+                            <a class="pull-left" href="#">
+                                <img class="media-object" src="http://placehold.it/64x64" alt="">
+                            </a>
+                            <div class="media-body">
+                                <h4 class="media-heading">Nested Start Bootstrap
+                                    <small>August 25, 2014 at 9:30 PM</small>
+                                </h4>
+                                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                            </div>
+                        </div>
+                        <!-- End Nested Comment -->
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- Blog Sidebar Widgets Column -->
+            <div class="col-md-4">
+
+                <!-- Blog Search Well -->
+                <div class="well">
+                    <h4>Blog Search</h4>
+                    <div class="input-group">
+                        <input type="text" class="form-control">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button">
+                                <span class="glyphicon glyphicon-search"></span>
+                        </button>
+                        </span>
+                    </div>
+                    <!-- /.input-group -->
+                </div>
+
+                <!-- Blog Categories Well -->
+                <div class="well">
+                    <h4>Blog Categories</h4>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled">
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled">
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- /.row -->
+                </div>
+
+                <!-- Side Widget Well -->
+                <div class="well">
+                    <h4>Side Widget Well</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
+                </div>
+
+            </div>
+
+        </div>
+        <!-- /.row -->
+
+        <hr>
+
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Your Website 2014</p>
+                </div>
+            </div>
+            <!-- /.row -->
+        </footer>
+
+    </div>
+    <!-- /.container -->
+
+    <!-- jQuery -->
+    <script src="{% static 'js/jquery.js' %}"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
 </body>
 
 </html>
