--- a/scriptnet/competitions/templates/competitions/submit.html
+++ b/scriptnet/competitions/templates/competitions/submit.html
@@ -14,19 +14,19 @@
     <title>ScriptNet Document Understanding Competitions</title>
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="{% static 'mastersite/css/bootstrap.min.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
 
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{% static 'mastersite/font-awesome/css/font-awesome.min.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}" type="text/css">
 
     <!-- Plugin CSS -->
-    <link rel="stylesheet" href="{% static 'mastersite/css/animate.min.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/animate.min.css' %}" type="text/css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'mastersite/css/creative.css' %}" type="text/css">
-    <link rel="stylesheet" href="{% static 'mastersite/css/sfikas.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/creative.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/sfikas.css' %}" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -52,7 +52,7 @@
 		            </form>					
                 </div>
 				<div class="col-lg-4">
-		    		<img src="{% static 'mastersite/img/nicesamples/1.jpg' %}" class="img-responsive" alt="">
+		    		<img src="{% static 'img/nicesamples/1.jpg' %}" class="img-responsive" alt="">
 				</div>
             </div>
         </div>
